<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_server_cpp</name>
  <version>0.0.9</version>
  <description>
    An implementation of obstacle server in C++.
  </description>

  <maintainer email="f1tenth@rtime.felk.cvut.cz">F1tenth CTU Community</maintainer>

  <license>TODO</license>

  <author email="klapajar@fel.cvut.cz">Jaroslav Klapálek</author>

  <url type="repository">https://github.com/CTU-F1T/obstacle_server_cpp</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend libraries -->
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <!-- build_depend message types -->
  <build_depend>obstacle_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- exec_depend libraries -->
  <exec_depend>tf</exec_depend>

  <!-- exec_depend message types -->
  <exec_depend>obstacle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <index url="git@github.com:CTU-F1T/obstacle_server_cpp.git" />
  </export>
</package>
